# resume-parser

./: .env  .gitignore  ai_response.json  gpt_parser.py  main.py  nlp_parser.py  ollama_parser.py  ollama_response.json  prompt.txt  pyproject.toml
data/: skills.json
logs/reviews/: 1_ai_response_20250919_203942.json
